First OtsTransceiver