@@ -47,7 +47,6 @@ import org.opentrafficsim.draw.ColorInterpolator;
 import org.opentrafficsim.draw.graphs.ContourDataSource;
 import org.opentrafficsim.draw.graphs.GraphPath;
 import org.opentrafficsim.draw.graphs.GraphPath.Section;
-import org.opentrafficsim.i4driving.demo.AttentionDemoUrban.DataTypeAttention;
 import org.opentrafficsim.i4driving.demo.plots.ContourPlotExtendedData;
 import org.opentrafficsim.i4driving.demo.plots.DistributionPlotExtendedData;
 import org.opentrafficsim.i4driving.sampling.TaskSaturationData;
@@ -94,7 +93,6 @@ import org.opentrafficsim.road.network.lane.Lane;
 import org.opentrafficsim.road.network.lane.LaneType;
 import org.opentrafficsim.road.network.lane.Stripe.Type;
 import org.opentrafficsim.road.network.lane.changing.LaneKeepingPolicy;
-import org.opentrafficsim.road.network.lane.conflict.Conflict;
 import org.opentrafficsim.road.network.lane.object.detector.SinkDetector;
 import org.opentrafficsim.road.network.lane.object.trafficlight.TrafficLight;
 import org.opentrafficsim.road.network.sampling.GtuDataRoad;
@@ -117,270 +115,282 @@ import org.opentrafficsim.trafficcontrol.FixedTimeController.SignalGroup;
 import nl.tudelft.simulation.dsol.swing.gui.TablePanel;
 import nl.tudelft.simulation.jstats.distributions.DistContinuous;
 import nl.tudelft.simulation.jstats.streams.StreamInterface;
-import picocli.CommandLine.Option;
 
 /**
  * Demo of attention in an Motorway setting.
- * 
  * @author AliNadi,wjschakel
  */
-public class AttentionDemoMotorway extends AbstractSimulationScript {
+public class AttentionDemoMotorway extends AbstractSimulationScript
+{
 
-	/** Social interactions. */
-	//@Option(names = "--social", description = "Enables social interactions", defaultValue = "true")
-	
+    /** */
+    private static final long serialVersionUID = 1L;
+
+    /** Social interactions. */
+    private boolean social;
+
     /** Front attention data type. */
     private static final DataTypeAttention DATA_ATT_FRONT =
             new DataTypeAttention(ChannelTask.FRONT.toString(), (c) -> ChannelTask.FRONT.equals(c));
 
     /** Right attention data type. */
     private static final DataTypeAttention DATA_ATT_RIGHT =
-    		new DataTypeAttention(ChannelTask.RIGHT.toString(), (c) -> ChannelTask.RIGHT.equals(c));
-    
+            new DataTypeAttention(ChannelTask.RIGHT.toString(), (c) -> ChannelTask.RIGHT.equals(c));
+
     /** Left attention data type. */
     private static final DataTypeAttention DATA_ATT_LEFT =
-    		new DataTypeAttention(ChannelTask.LEFT.toString(), (c) -> ChannelTask.LEFT.equals(c));
-    
+            new DataTypeAttention(ChannelTask.LEFT.toString(), (c) -> ChannelTask.LEFT.equals(c));
+
     /** Rear attention data type. */
     private static final DataTypeAttention DATA_ATT_REAR =
-    		new DataTypeAttention(ChannelTask.REAR.toString(), (c) -> ChannelTask.REAR.equals(c));
+            new DataTypeAttention(ChannelTask.REAR.toString(), (c) -> ChannelTask.REAR.equals(c));
 
     /** Task saturation data type. */
     private static final TaskSaturationData DATA_SATURATION = new TaskSaturationData();
 
     /** Time-to-collision data type. */
     private static final TimeToCollision DATA_TTC = new TimeToCollision();
-    
-	private boolean social;
 
-	//private RoadSampler sampler;
+    /**
+     * Constructor.
+     */
+    protected AttentionDemoMotorway()
+    {
+        super("Attention Motorway", "Demo of attention in an Motorway setting.");
+    }
 
-	protected AttentionDemoMotorway() {
-		super("Attention Motorway", "Demo of attention in an Motorway setting.");
-	}
+    /**
+     * Main program.
+     * @param args command line arguments. See AbstractSimulationScript for available arguments.
+     * @throws Exception when an exception occurs.
+     */
+    public static void main(final String[] args) throws Exception
+    {
+        AttentionDemoMotorway demo = new AttentionDemoMotorway();
+        CliUtil.execute(demo, args);
+        demo.start();
+    }
 
-	public static void main(String[] args) throws Exception {
+    @Override
+    protected RoadNetwork setupSimulation(final OtsSimulatorInterface sim) throws Exception
+    {
 
-		AttentionDemoMotorway demo = new AttentionDemoMotorway();
-		CliUtil.execute(demo, args);
-		demo.start();
-	}
-	@Override
-	protected RoadNetwork setupSimulation(OtsSimulatorInterface sim) throws Exception {
+        RoadNetwork network = new RoadNetwork("Motorway demo", sim);
+        sim.getReplication()
+                .setHistoryManager(new HistoryManagerDevs(sim, Duration.instantiateSI(5.0), Duration.instantiateSI(10.0)));
 
-		RoadNetwork network = new RoadNetwork("Motorway demo", sim);
-		sim.getReplication().setHistoryManager(
-				new HistoryManagerDevs(sim, Duration.instantiateSI(5.0), Duration.instantiateSI(10.0)));
+        Point2d pointA = new Point2d(0.0, 0.0);
+        Point2d pointB = new Point2d(500.0, 0.0);
+        Point2d pointC = new Point2d(750.0, 0.0);
+        Point2d pointD = new Point2d(1250.0, 0.0);
+        Point2d pointE = new Point2d(1500.0, 0.0);
+        Point2d pointF = new Point2d(2000.0, 0.0);
+        Point2d pointG = new Point2d(250.0, -30.0);
+        Point2d pointH = new Point2d(1750.0, -30.0);
 
-		Point2d pointA = new Point2d(0.0, 0.0);
-		Point2d pointB = new Point2d(500.0, 0.0);
-		Point2d pointC = new Point2d(750.0, 0.0);
-		Point2d pointD = new Point2d(1250.0, 0.0);
-		Point2d pointE = new Point2d(1500.0, 0.0);
-		Point2d pointF = new Point2d(2000.0, 0.0);
-		Point2d pointG = new Point2d(250.0, -30.0);
-		Point2d pointH = new Point2d(1750.0, -30.0);
+        Node nodeA = new Node(network, "A", pointA);
+        Node nodeB = new Node(network, "B", pointB);
+        Node nodeC = new Node(network, "C", pointC);
+        Node nodeD = new Node(network, "D", pointD);
+        Node nodeE = new Node(network, "E", pointE);
+        Node nodeF = new Node(network, "F", pointF);
+        Node nodeG = new Node(network, "G", pointG);
+        Node nodeH = new Node(network, "H", pointH);
 
-		Node nodeA = new Node(network, "A", pointA);
-		Node nodeB = new Node(network, "B", pointB);
-		Node nodeC = new Node(network, "C", pointC);
-		Node nodeD = new Node(network, "D", pointD);
-		Node nodeE = new Node(network, "E", pointE);
-		Node nodeF = new Node(network, "F", pointF);
-		Node nodeG = new Node(network, "G", pointG);
-		Node nodeH = new Node(network, "H", pointH);
+        // Links
+        LinkType linkType = DefaultsNl.FREEWAY;
 
-		// Links
-		LinkType linkType = DefaultsNl.FREEWAY;
+        LaneKeepingPolicy policy = LaneKeepingPolicy.KEEPRIGHT;
+        GtuType gtuType = DefaultsNl.VEHICLE;
+        Length laneWidth = Length.instantiateSI(3.5);
+        LaneType laneType = DefaultsRoadNl.FREEWAY;
+        Speed speedLimit = new Speed(100.0, SpeedUnit.KM_PER_HOUR);
 
-		LaneKeepingPolicy policy = LaneKeepingPolicy.KEEPRIGHT;
-		GtuType gtuType = DefaultsNl.VEHICLE;
-		Length laneWidth = Length.instantiateSI(3.5);
-		LaneType laneType = DefaultsRoadNl.FREEWAY;
-		Speed speedLimit = new Speed(100.0, SpeedUnit.KM_PER_HOUR);
+        new LaneFactory(network, nodeA, nodeB, linkType, sim, policy, gtuType).leftToRight(2.0, laneWidth, laneType, speedLimit)
+                .addLanes(Type.DASHED);
 
-		new LaneFactory(network, nodeA, nodeB, linkType, sim, policy, gtuType)
-				.leftToRight(2.0, laneWidth, laneType, speedLimit).addLanes(Type.DASHED);
+        new LaneFactory(network, nodeG, nodeB, linkType, sim, policy, gtuType).leftToRight(0.0, laneWidth, laneType, speedLimit)
+                .addLanes();
 
-		new LaneFactory(network, nodeG, nodeB, linkType, sim, policy, gtuType)
-				.leftToRight(0.0, laneWidth, laneType, speedLimit).addLanes();
+        new LaneFactory(network, nodeB, nodeC, linkType, sim, policy, gtuType).leftToRight(2.0, laneWidth, laneType, speedLimit)
+                .addLanes(Type.DASHED, Type.BLOCK);
+        new LaneFactory(network, nodeC, nodeD, linkType, sim, policy, gtuType).leftToRight(2.0, laneWidth, laneType, speedLimit)
+                .addLanes(Type.DASHED);
+        new LaneFactory(network, nodeD, nodeE, linkType, sim, policy, gtuType).leftToRight(2.0, laneWidth, laneType, speedLimit)
+                .addLanes(Type.DASHED, Type.BLOCK);
+        List<Lane> lanesEF = new LaneFactory(network, nodeE, nodeF, linkType, sim, policy, gtuType)
+                .leftToRight(2.0, laneWidth, laneType, speedLimit).addLanes(Type.DASHED).getLanes();
+        List<Lane> lanesEH = new LaneFactory(network, nodeE, nodeH, linkType, sim, policy, gtuType)
+                .leftToRight(0.0, laneWidth, laneType, speedLimit).addLanes().getLanes();
 
-		new LaneFactory(network, nodeB, nodeC, linkType, sim, policy, gtuType)
-				.leftToRight(2.0, laneWidth, laneType, speedLimit).addLanes(Type.DASHED, Type.BLOCK);
-		new LaneFactory(network, nodeC, nodeD, linkType, sim, policy, gtuType)
-				.leftToRight(2.0, laneWidth, laneType, speedLimit).addLanes(Type.DASHED);
-		new LaneFactory(network, nodeD, nodeE, linkType, sim, policy, gtuType)
-				.leftToRight(2.0, laneWidth, laneType, speedLimit).addLanes(Type.DASHED, Type.BLOCK);
-		List<Lane> lanesEF = new LaneFactory(network, nodeE, nodeF, linkType, sim, policy, gtuType)
-				.leftToRight(2.0, laneWidth, laneType, speedLimit).addLanes(Type.DASHED).getLanes();
-		List<Lane> lanesEH = new LaneFactory(network, nodeE, nodeH, linkType, sim, policy, gtuType)
-				.leftToRight(0.0, laneWidth, laneType, speedLimit).addLanes().getLanes();
+        List<Node> origins = new ArrayList<>();
+        origins.add(nodeA);
+        origins.add(nodeG);
+        List<Node> destinations = new ArrayList<>();
+        destinations.add(nodeF);
+        destinations.add(nodeH);
+        Categorization categorization = new Categorization("Per GTU Type", GtuType.class);
+        TimeVector timeVector = new TimeVector(new double[] {0.0, 20.0, 60.0}, TimeUnit.BASE_MINUTE, StorageType.DENSE);
+        OdMatrix od = new OdMatrix("OD", origins, destinations, categorization, timeVector, Interpolation.LINEAR);
 
-		List<Node> origins = new ArrayList<>();
-		origins.add(nodeA);
-		origins.add(nodeG);
-		List<Node> destinations = new ArrayList<>();
-		destinations.add(nodeF);
-		destinations.add(nodeH);
-		Categorization categorization = new Categorization("Per GTU Type", GtuType.class);
-		TimeVector timeVector = new TimeVector(new double[] { 0.0, 20.0, 60.0 }, TimeUnit.BASE_MINUTE,
-				StorageType.DENSE);
-		OdMatrix od = new OdMatrix("OD", origins, destinations, categorization, timeVector, Interpolation.LINEAR);
+        double truckFraction = 0.00;
+        Category carCategory = new Category(categorization, DefaultsNl.CAR);
+        Category truckCategory = new Category(categorization, DefaultsNl.TRUCK);
 
-		double truckFraction = 0.05;
-		Category carCategory = new Category(categorization, DefaultsNl.CAR);
-		Category truckCategory = new Category(categorization, DefaultsNl.TRUCK);
+        FrequencyVector demandAF =
+                new FrequencyVector(new double[] {300.0, 1000.0, 300.0}, FrequencyUnit.PER_HOUR, StorageType.DENSE);
+        od.putDemandVector(nodeA, nodeH, carCategory, demandAF, 1.0 - truckFraction);
+        od.putDemandVector(nodeA, nodeH, truckCategory, demandAF, truckFraction);
+        FrequencyVector demandAH =
+                new FrequencyVector(new double[] {50.0, 300.0, 50.0}, FrequencyUnit.PER_HOUR, StorageType.DENSE);
+        od.putDemandVector(nodeA, nodeH, carCategory, demandAH, 1.0 - truckFraction);
+        od.putDemandVector(nodeA, nodeH, truckCategory, demandAH, truckFraction);
+        FrequencyVector demandGF =
+                new FrequencyVector(new double[] {50.0, 300.0, 50.0}, FrequencyUnit.PER_HOUR, StorageType.DENSE);
+        od.putDemandVector(nodeG, nodeF, carCategory, demandGF, 1.0 - truckFraction);
+        od.putDemandVector(nodeG, nodeF, truckCategory, demandGF, truckFraction);
+        FrequencyVector demandGH =
+                new FrequencyVector(new double[] {25.0, 300.0, 25.0}, FrequencyUnit.PER_HOUR, StorageType.DENSE);
+        od.putDemandVector(nodeG, nodeH, carCategory, demandGH, 1.0 - truckFraction);
+        od.putDemandVector(nodeG, nodeH, truckCategory, demandGH, truckFraction);
 
-		FrequencyVector demandAH = new FrequencyVector(new double[] { 100.0, 500.0, 100.0 }, FrequencyUnit.PER_HOUR,
-				StorageType.DENSE);
-		od.putDemandVector(nodeA, nodeH, carCategory, demandAH, 1.0 - truckFraction);
-		od.putDemandVector(nodeA, nodeH, truckCategory, demandAH, truckFraction);
-		FrequencyVector demandGF = new FrequencyVector(new double[] { 100.0, 500.0, 100.0 }, FrequencyUnit.PER_HOUR,
-				StorageType.DENSE);
-		od.putDemandVector(nodeG, nodeF, carCategory, demandGF, 1.0 - truckFraction);
-		od.putDemandVector(nodeG, nodeF, truckCategory, demandGF, truckFraction);
-		FrequencyVector demandGH = new FrequencyVector(new double[] { 25.0, 125.0, 25.0 }, FrequencyUnit.PER_HOUR,
-				StorageType.DENSE);
-		od.putDemandVector(nodeG, nodeH, carCategory, demandGH, 1.0 - truckFraction);
-		od.putDemandVector(nodeG, nodeH, truckCategory, demandGH, truckFraction);
+        GtuType.registerTemplateSupplier(DefaultsNl.CAR, Defaults.NL);
+        GtuType.registerTemplateSupplier(DefaultsNl.TRUCK, Defaults.NL);
 
-		GtuType.registerTemplateSupplier(DefaultsNl.CAR, Defaults.NL);
-		GtuType.registerTemplateSupplier(DefaultsNl.TRUCK, Defaults.NL);
+        OdOptions odOptions = new OdOptions();
+        StreamInterface stream = sim.getModel().getStream("generation");
 
-		OdOptions odOptions = new OdOptions();
-		StreamInterface stream = sim.getModel().getStream("generation");
+        Set<MandatoryIncentive> mandatory = new LinkedHashSet<>();
+        mandatory.add(new IncentiveRoute());
+        Set<VoluntaryIncentive> voluntary = new LinkedHashSet<>();
+        voluntary.add(new IncentiveSpeedWithCourtesy());
+        voluntary.add(new IncentiveKeep());
 
-		Set<MandatoryIncentive> mandatory = new LinkedHashSet<>();
-		mandatory.add(new IncentiveRoute());
-		Set<VoluntaryIncentive> voluntary = new LinkedHashSet<>();
-		voluntary.add(new IncentiveSpeedWithCourtesy());
-		voluntary.add(new IncentiveKeep());
+        if (this.social)
+        {
+            voluntary.add(new IncentiveCourtesy());
+            voluntary.add(new IncentiveSocioSpeed());
+        }
 
-		if (this.social) {
-			voluntary.add(new IncentiveCourtesy());
-			voluntary.add(new IncentiveSocioSpeed());
-		}
+        Set<AccelerationIncentive> acceleration = new LinkedHashSet<>();
+        acceleration.add(new AccelerationTrafficLights());
 
-		Set<AccelerationIncentive> acceleration = new LinkedHashSet<>();
-		acceleration.add(new AccelerationTrafficLights());
+        // Tailgating tailGating = this.social ? Tailgating.PRESSURE : Tailgating.NONE;
 
-		//Tailgating tailGating = this.social ? Tailgating.PRESSURE : Tailgating.NONE;
+        PerceptionFactory perceptionFactory = new ChannelPerceptionFactory();
+        // PerceptionFactory perceptionFactory = new DefaultLmrsPerceptionFactory();
 
-		PerceptionFactory perceptionFactory = new ChannelPerceptionFactory();
-		// PerceptionFactory perceptionFactory = new DefaultLmrsPerceptionFactory();
+        CarFollowingModelFactory<IdmPlus> cfFactory =
+                new AbstractIdmFactory<>(new IdmPlus(Idm.HEADWAY, new SocioDesiredSpeed(Idm.DESIRED_SPEED)), stream);
 
-		CarFollowingModelFactory<IdmPlus> cfFactory = new AbstractIdmFactory<>(
-				new IdmPlus(Idm.HEADWAY, new SocioDesiredSpeed(Idm.DESIRED_SPEED)), stream);
+        // LmrsFactory lmrsFactory = new LmrsFactory(cfFactory, perceptionFactory,
+        // Synchronization.PASSIVE,
+        // Cooperation.PASSIVE, GapAcceptance.INFORMED, tailGating, mandatory,
+        // voluntary, acceleration);
+        AbstractLaneBasedTacticalPlannerFactory<Lmrs> lmrsFactory =
+                new AbstractLaneBasedTacticalPlannerFactory<>(cfFactory, perceptionFactory)
+                {
+                    /** {@inheritDoc} */
+                    @Override
+                    public Lmrs create(final LaneBasedGtu gtu) throws GtuException
+                    {
+                        Lmrs lmrs = new Lmrs(nextCarFollowingModel(gtu), gtu, getPerceptionFactory().generatePerception(gtu),
+                                Synchronization.ALIGN_GAP, Cooperation.PASSIVE, GapAcceptance.INFORMED, Tailgating.PRESSURE);
+                        lmrs.addMandatoryIncentive(new IncentiveRoute());
+                        lmrs.addAccelerationIncentive(new AccelerationTrafficLights());
+                        return lmrs;
+                    }
 
-		// LmrsFactory lmrsFactory = new LmrsFactory(cfFactory, perceptionFactory,
-		// Synchronization.PASSIVE,
-		// Cooperation.PASSIVE, GapAcceptance.INFORMED, tailGating, mandatory,
-		// voluntary, acceleration);
-		AbstractLaneBasedTacticalPlannerFactory<Lmrs> lmrsFactory = new AbstractLaneBasedTacticalPlannerFactory<>(
-				cfFactory, perceptionFactory) {
-			/** {@inheritDoc} */
-			@Override
-			public Lmrs create(final LaneBasedGtu gtu) throws GtuException {
-				Lmrs lmrs = new Lmrs(nextCarFollowingModel(gtu), gtu, getPerceptionFactory().generatePerception(gtu),
-						Synchronization.ALIGN_GAP, Cooperation.PASSIVE, GapAcceptance.INFORMED, Tailgating.PRESSURE);
-				lmrs.addMandatoryIncentive(new IncentiveRoute());
-				lmrs.addAccelerationIncentive(new AccelerationTrafficLights());
-				return lmrs;
-			}
+                    /** {@inheritDoc} */
+                    @Override
+                    public Parameters getParameters() throws ParameterException
+                    {
+                        ParameterSet parameters = new ParameterSet();
+                        parameters.setDefaultParameters(LmrsUtil.class);
+                        parameters.setDefaultParameters(LmrsParameters.class);
+                        parameters.setDefaultParameters(TrafficLightUtil.class);
+                        getCarFollowingParameters().setAllIn(parameters);
+                        getPerceptionFactory().getParameters().setAllIn(parameters);
+                        parameters.setDefaultParameter(ParameterTypes.VCONG);
+                        parameters.setDefaultParameter(ParameterTypes.T0);
+                        parameters.setDefaultParameter(ParameterTypes.LCDUR);
+                        return parameters;
+                    }
 
-			/** {@inheritDoc} */
-			@Override
-			public Parameters getParameters() throws ParameterException {
-				ParameterSet parameters = new ParameterSet();
-				parameters.setDefaultParameters(LmrsUtil.class);
-				parameters.setDefaultParameters(LmrsParameters.class);
-				parameters.setDefaultParameters(TrafficLightUtil.class);
-				getCarFollowingParameters().setAllIn(parameters);
-				getPerceptionFactory().getParameters().setAllIn(parameters);
-				parameters.setDefaultParameter(ParameterTypes.VCONG);
-				parameters.setDefaultParameter(ParameterTypes.T0);
-				parameters.setDefaultParameter(ParameterTypes.LCDUR);
-				return parameters;
-			}
+                };
 
-		};
+        ParameterFactoryByType parameterFactory = new ParameterFactoryByType();
+        parameterFactory.addParameter(DefaultsNl.TRUCK, ParameterTypes.A, Acceleration.instantiateSI(0.8));
+        parameterFactory.addParameter(DefaultsNl.CAR, LmrsParameters.VGAIN, new Speed(35.0, SpeedUnit.KM_PER_HOUR));
+        parameterFactory.addParameter(Tailgating.RHO, 0.0);
+        double fractionUnder = 0.8;
+        double error = 0.4;
+        parameterFactory.addParameter(Estimation.OVER_EST, new DistContinuous(stream)
+        {
+            /** */
+            private static final long serialVersionUID = 20240930L;
 
-		ParameterFactoryByType parameterFactory = new ParameterFactoryByType();
-		parameterFactory.addParameter(DefaultsNl.TRUCK, ParameterTypes.A, Acceleration.instantiateSI(0.8));
-		parameterFactory.addParameter(DefaultsNl.CAR, LmrsParameters.VGAIN, new Speed(35.0, SpeedUnit.KM_PER_HOUR));
-		double fractionUnder = 0.8;
-		double error = 0.4;
-		parameterFactory.addParameter(Estimation.OVER_EST, new DistContinuous(stream) {
-			/** */
-			private static final long serialVersionUID = 20240930L;
+            /** {@inheritDoc} */
+            @Override
+            public double getProbabilityDensity(final double x)
+            {
+                return x == -error ? fractionUnder : (x == error ? error - fractionUnder : error);
+            }
 
-			/** {@inheritDoc} */
-			@Override
-			public double getProbabilityDensity(final double x) {
-				return x == -error ? fractionUnder : (x == error ? error - fractionUnder : error);
-			}
+            /** {@inheritDoc} */
+            @Override
+            public double draw()
+            {
+                return getStream().nextDouble() <= fractionUnder ? -error : error;
+            }
+        });
+        LaneBasedStrategicalRoutePlannerFactory stratFactory =
+                new LaneBasedStrategicalRoutePlannerFactory(lmrsFactory, parameterFactory);
 
-			/** {@inheritDoc} */
-			@Override
-			public double draw() {
-				return getStream().nextDouble() <= fractionUnder ? -error : error;
-			}
-		});
-		LaneBasedStrategicalRoutePlannerFactory stratFactory = new LaneBasedStrategicalRoutePlannerFactory(lmrsFactory,
-				parameterFactory);
+        odOptions.set(OdOptions.GTU_TYPE, new DefaultLaneBasedGtuCharacteristicsGeneratorOd.Factory(stratFactory).create());
+        odOptions.set(OdOptions.LANE_BIAS,
+                new LaneBiases().addBias(DefaultsNl.CAR, LaneBias.WEAK_LEFT).addBias(DefaultsNl.TRUCK, LaneBias.TRUCK_RIGHT));
 
-		odOptions.set(OdOptions.GTU_TYPE,
-				new DefaultLaneBasedGtuCharacteristicsGeneratorOd.Factory(stratFactory).create());
-		odOptions.set(OdOptions.LANE_BIAS, new LaneBiases().addBias(DefaultsNl.CAR, LaneBias.WEAK_LEFT)
-				.addBias(DefaultsNl.TRUCK, LaneBias.TRUCK_RIGHT));
+        OdApplier.applyOd(network, od, odOptions, DefaultsRoadNl.ROAD_USERS);
 
-		OdApplier.applyOd(network, od, odOptions, DefaultsRoadNl.ROAD_USERS);
+        for (Lane lane : lanesEF)
+        {
+            new SinkDetector(lane, lane.getLength().minus(Length.instantiateSI(50.0)), sim, DefaultsRoadNl.ROAD_USERS);
+        }
+        for (Lane lane : lanesEH)
+        {
+            new SinkDetector(lane, lane.getLength().minus(Length.instantiateSI(50.0)), sim, DefaultsRoadNl.ROAD_USERS);
+        }
 
-		OdApplier.applyOd(network, od, odOptions, DefaultsRoadNl.ROAD_USERS);
+        new TrafficLight("Traffic light", lanesEH.get(0), lanesEH.get(0).getLength().minus(Length.instantiateSI(60.0)), sim);
 
-		for (Lane lane : lanesEF) {
-			new SinkDetector(lane, lane.getLength().minus(Length.instantiateSI(50.0)), sim, DefaultsRoadNl.ROAD_USERS);
-		}
-		for (Lane lane : lanesEH) {
-			new SinkDetector(lane, lane.getLength().minus(Length.instantiateSI(50.0)), sim, DefaultsRoadNl.ROAD_USERS);
-		}
+        SignalGroup signalGroup = new SignalGroup("Group", Set.of("EH.Lane 1.Traffic light"), Duration.ZERO,
+                Duration.instantiateSI(22.0), Duration.instantiateSI(4.0));
+        new FixedTimeController("Controller", sim, network, Duration.instantiateSI(60.0), Duration.ZERO, Set.of(signalGroup));
 
-		new TrafficLight("Traffic light", lanesEH.get(0), lanesEH.get(0).getLength().minus(Length.instantiateSI(60.0)),
-				sim);
+        GtuColorer[] colorers =
+                new GtuColorer[] {new IdGtuColorer(), new SpeedGtuColorer(new Speed(150.0, SpeedUnit.KM_PER_HOUR)),
+                        new AccelerationGtuColorer(Acceleration.instantiateSI(-6.0), Acceleration.instantiateSI(2.0)),
+                        new SplitColorer(), new IncentiveColorer(IncentiveRoute.class),
+                        new IncentiveColorer(IncentiveSocioSpeed.class), new TaskSaturationChannelColorer()};
 
-		SignalGroup signalGroup = new SignalGroup("Group", Set.of("EH.Lane 1.Traffic light"), Duration.ZERO,
-				Duration.instantiateSI(22.0), Duration.instantiateSI(4.0));
-		new FixedTimeController("Controller", sim, network, Duration.instantiateSI(60.0), Duration.ZERO,
-				Set.of(signalGroup));
+        setGtuColorer(new SwitchableGtuColorer(0, colorers));
 
-		GtuColorer[] colorers = new GtuColorer[] { new IdGtuColorer(),
-				new SpeedGtuColorer(new Speed(150.0, SpeedUnit.KM_PER_HOUR)),
-				new AccelerationGtuColorer(Acceleration.instantiateSI(-6.0), Acceleration.instantiateSI(2.0)),
-				new SplitColorer(), new IncentiveColorer(IncentiveRoute.class),
-				new IncentiveColorer(IncentiveSocioSpeed.class), new TaskSaturationChannelColorer() };
+        return network;
+    }
 
-		setGtuColorer(new SwitchableGtuColorer(0, colorers));
-
-		return network;
-	}
-	
-	
-	
-	
-
-	@Override
+    @Override
     protected void addTabs(final OtsSimulatorInterface sim, final OtsSimulationApplication<?> animation)
     {
 
-        RoadSampler sampler = new RoadSampler(Set.of(DATA_ATT_FRONT, DATA_ATT_RIGHT,DATA_ATT_LEFT,DATA_ATT_REAR, DATA_SATURATION, DATA_TTC),
-                Collections.emptySet(), getNetwork(), Frequency.instantiateSI(2.0));
-        addPlots("Motorway", List.of("A", "B", "C", "D", "E", "F"), 0, sim, animation, sampler);
-        //addPlots("Motorway-to-Offramp", List.of("A", "B", "C", "D", "E", "H"), 0, sim, animation, sampler);
-        //addPlots("Onramp-to-Motorway", List.of("G", "B", "C", "D","E","F"), 0, sim, animation, sampler);
-        //addPlots("Onramp-to-Offramp", List.of("G", "B", "C", "D","E","H"), 0, sim, animation, sampler);
-
+        RoadSampler sampler =
+                new RoadSampler(Set.of(DATA_ATT_FRONT, DATA_ATT_RIGHT, DATA_ATT_LEFT, DATA_ATT_REAR, DATA_SATURATION, DATA_TTC),
+                        Collections.emptySet(), getNetwork(), Frequency.instantiateSI(2.0));
+        // addPlots("Motorway left", List.of("A", "B", "C", "D", "E", "F"), 0, sim, animation, sampler);
+        addPlots("Motorway right", List.of("A", "B", "C", "D", "E", "F"), 1, sim, animation, sampler);
+        // addPlots("Offramp", List.of("D", "E", "H"), 0, sim, animation, sampler);
+        // addPlots("Onramp", List.of("G", "B", "C"), 0, sim, animation, sampler);
     }
-	
 
     /**
      * Adds plots for a single path, defined by a list of nodes, and lane number on the links.
@@ -401,15 +411,15 @@ public class AttentionDemoMotorway extends AbstractSimulationScript {
         ContourPlotExtendedData front =
                 new ContourPlotExtendedData("Attention to front", sim, source, DATA_ATT_FRONT, 0.0, 1.0, 0.2);
         charts.setCell(new SwingContourPlot(front).getContentPane(), 0, 0);
-        ContourPlotExtendedData Right =
-                new ContourPlotExtendedData("Attention to Right", sim, source, DATA_ATT_RIGHT, 0.0, 1.0, 0.2);
-        charts.setCell(new SwingContourPlot(Right).getContentPane(), 0, 1);
-        ContourPlotExtendedData Left =
-                new ContourPlotExtendedData("Attention to Left", sim, source, DATA_ATT_LEFT, 0.0, 1.0, 0.2);
-        charts.setCell(new SwingContourPlot(Left).getContentPane(), 1, 0);
-        ContourPlotExtendedData Rear =
-                new ContourPlotExtendedData("Attention to Rear", sim, source, DATA_ATT_REAR, 0.0, 1.0, 0.2);
-        charts.setCell(new SwingContourPlot(Rear).getContentPane(), 1, 1);
+        ContourPlotExtendedData right =
+                new ContourPlotExtendedData("Attention to right", sim, source, DATA_ATT_RIGHT, 0.0, 1.0, 0.2);
+        charts.setCell(new SwingContourPlot(right).getContentPane(), 0, 1);
+        ContourPlotExtendedData left =
+                new ContourPlotExtendedData("Attention to left", sim, source, DATA_ATT_LEFT, 0.0, 1.0, 0.2);
+        charts.setCell(new SwingContourPlot(left).getContentPane(), 1, 0);
+        ContourPlotExtendedData rear =
+                new ContourPlotExtendedData("Attention to rear", sim, source, DATA_ATT_REAR, 0.0, 1.0, 0.2);
+        charts.setCell(new SwingContourPlot(rear).getContentPane(), 1, 1);
         ContourPlotExtendedData saturation =
                 new ContourPlotExtendedData("Task saturation", sim, source, DATA_SATURATION, 0.0, 3.0, 0.5);
         charts.setCell(new SwingContourPlot(saturation).getContentPane(), 2, 0);
@@ -431,8 +441,9 @@ public class AttentionDemoMotorway extends AbstractSimulationScript {
         List<Section<LaneDataRoad>> out = new ArrayList<>();
         for (int i = 0; i < nodes.size() - 1; i++)
         {
-            String linkId = nodes.get(i) + "_" + nodes.get(i + 1);
-            Lane lane = ((CrossSectionLink) getNetwork().getLink(linkId)).getLanes().get(laneNum);
+            String linkId = nodes.get(i) + nodes.get(i + 1);
+            List<Lane> lanes = ((CrossSectionLink) getNetwork().getLink(linkId)).getLanes();
+            Lane lane = lanes.get(Math.min(laneNum, lanes.size() - 1));
             Speed speedLimit = Speed.ZERO;
             try
             {
@@ -486,61 +497,71 @@ public class AttentionDemoMotorway extends AbstractSimulationScript {
         }
     }
 
+    public static class TaskSaturationChannelColorer implements GtuColorer
+    {
 
-	public static class TaskSaturationChannelColorer implements GtuColorer {
+        /** Full. */
+        static final Color MAX = Color.RED;
 
-		/** Full. */
-		static final Color MAX = Color.RED;
+        /** Medium. */
+        static final Color MID = Color.YELLOW;
 
-		/** Medium. */
-		static final Color MID = Color.YELLOW;
+        /** Zero. */
+        static final Color SUBCRIT = Color.GREEN;
 
-		/** Zero. */
-		static final Color SUBCRIT = Color.GREEN;
+        /** Not available. */
+        static final Color NA = Color.WHITE;
 
-		/** Not available. */
-		static final Color NA = Color.WHITE;
+        /** Legend. */
+        static final List<LegendEntry> LEGEND;
 
-		/** Legend. */
-		static final List<LegendEntry> LEGEND;
+        static
+        {
+            LEGEND = new ArrayList<>();
+            LEGEND.add(new LegendEntry(SUBCRIT, "sub-critical", "sub-critical task saturation"));
+            LEGEND.add(new LegendEntry(MID, "1.5", "1.5 task saturation"));
+            LEGEND.add(new LegendEntry(MAX, "3.0", "3.0 or larger"));
+            LEGEND.add(new LegendEntry(NA, "N/A", "N/A"));
+        }
 
-		static {
-			LEGEND = new ArrayList<>();
-			LEGEND.add(new LegendEntry(SUBCRIT, "sub-critical", "sub-critical task saturation"));
-			LEGEND.add(new LegendEntry(MID, "1.5", "1.5 task saturation"));
-			LEGEND.add(new LegendEntry(MAX, "3.0", "3.0 or larger"));
-			LEGEND.add(new LegendEntry(NA, "N/A", "N/A"));
-		}
+        /** {@inheritDoc} */
+        @Override
+        public Color getColor(final Gtu gtu)
+        {
+            Double ts = gtu.getParameters().getParameterOrNull(Fuller.TS);
+            if (ts == null)
+            {
+                return NA;
+            }
+            if (ts <= 1.0)
+            {
+                return SUBCRIT;
+            }
+            else if (ts > 3.0)
+            {
+                return MAX;
+            }
+            else if (ts < 1.5)
+            {
+                return ColorInterpolator.interpolateColor(SUBCRIT, MID, (ts - 1.0) / 0.5);
+            }
+            return ColorInterpolator.interpolateColor(MID, MAX, (ts - 1.5) / 1.5);
+        }
 
-		/** {@inheritDoc} */
-		@Override
-		public Color getColor(final Gtu gtu) {
-			Double ts = gtu.getParameters().getParameterOrNull(Fuller.TS);
-			if (ts == null) {
-				return NA;
-			}
-			if (ts <= 1.0) {
-				return SUBCRIT;
-			} else if (ts > 3.0) {
-				return MAX;
-			} else if (ts < 1.5) {
-				return ColorInterpolator.interpolateColor(SUBCRIT, MID, (ts - 1.0) / 0.5);
-			}
-			return ColorInterpolator.interpolateColor(MID, MAX, (ts - 1.5) / 1.5);
-		}
+        /** {@inheritDoc} */
+        @Override
+        public List<LegendEntry> getLegend()
+        {
+            return LEGEND;
+        }
 
-		/** {@inheritDoc} */
-		@Override
-		public List<LegendEntry> getLegend() {
-			return LEGEND;
-		}
+        /** {@inheritDoc} */
+        @Override
+        public String toString()
+        {
+            return "Task saturation";
+        }
 
-		/** {@inheritDoc} */
-		@Override
-		public String toString() {
-			return "Task saturation";
-		}
-
-	}
+    }
 
 }
